--- a/gradle.properties
+++ b/gradle.properties
@@ -1,1 +1,12 @@
+# ТОЛЬКО 1.21
+minecraft_version=1.21
+loader_version=0.16.7
+# Совместимая ветка Fabric API под 1.21. Если репо вдруг ругнется — обнови на ближайшую доступную 1.21.
+fabric_api_version=0.100.8+1.21
 
+archives_base_name=fabric-world-randomizer
+maven_group=dev.aks
+mod_version=0.1.0
+
+org.gradle.jvmargs=-Xmx3G -Dfile.encoding=UTF-8
+java_version=21
