--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,19 @@
+// Разрешаем, откуда брать плагины Gradle (в т.ч. fabric-loom)
+pluginManagement {
+  repositories {
+    gradlePluginPortal()
+    maven { url = "https://maven.fabricmc.net/" }
+    mavenCentral()
+  }
+}
+
+// Репозитории для обычных зависимостей (Fabric API, т.д.)
+dependencyResolutionManagement {
+  repositoriesMode.set(RepositoriesMode.PREFER_PROJECT)
+  repositories {
+    maven { url = "https://maven.fabricmc.net/" }
+    mavenCentral()
+  }
+}
+
 rootProject.name = "fabric-world-randomizer"
