--- a/build.gradle
+++ b/build.gradle
@@ -1,42 +1,49 @@
 plugins {
-  // Для 1.21 хватит 1.6.+. Не нужен 1.7, он уводит к 1.21.1/1.21.2.
-  id 'fabric-loom' version '1.6.+'
-  id 'maven-publish'
+    id 'fabric-loom' version '1.6.12'
+    id 'maven-publish'
+    id 'java'
 }
 
 group = 'dev.aks'
 version = '0.1.0'
+archivesBaseName = 'world-randomizer'
+
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(21)
+    }
+    withSourcesJar()
+}
 
 repositories {
-  // Нужен для fabric-api и прочего
-  maven { url = "https://maven.fabricmc.net/" }
-  mavenCentral()
+    mavenCentral()
+    maven { url = 'https://maven.fabricmc.net/' }
+    maven { url = 'https://maven.terraformersmc.com/releases' }
 }
 
 dependencies {
-  minecraft "com.mojang:minecraft:${minecraft_version}"
-  mappings loom.officialMojangMappings()
-  modImplementation "net.fabricmc:fabric-loader:${loader_version}"
-  modImplementation "net.fabricmc.fabric-api:fabric-api:${fabric_api_version}"
-}
+    // Базовая игра и маппинги — это то, чего у тебя не было на compile classpath
+    minecraft "com.mojang:minecraft:1.21"
+    mappings loom.officialMojangMappings()
 
-tasks.withType(JavaCompile).configureEach {
-  options.release = java_version.toInteger()
-}
+    // Loader + Fabric API под 1.21
+    modImplementation "net.fabricmc:fabric-loader:0.15.11"
+    modImplementation "net.fabricmc.fabric-api:fabric-api:0.100.7+1.21"
 
-java {
-  withSourcesJar()
-  toolchain.languageVersion = JavaLanguageVersion.of(java_version)
+    // Логгер по желанию
+    implementation "org.slf4j:slf4j-api:2.0.13"
 }
 
 loom {
-  splitEnvironmentSourceSets()
+    // если будешь делить client/server сорцы:
+    // splitEnvironmentSourceSets()
 }
 
-publishing {
-  publications {
-    mavenJava(MavenPublication) {
-      from components.java
-    }
-  }
+tasks.withType(JavaCompile).configureEach {
+    options.release = 21
+    options.encoding = 'UTF-8'
+}
+
+jar {
+    from("LICENSE") { rename { "${it}_${archivesBaseName}" } }
 }
