--- a/gradle.properties
+++ b/gradle.properties
@@ -1,12 +1,9 @@
-# ТОЛЬКО 1.21
-minecraft_version=1.21
-loader_version=0.16.7
-# Совместимая ветка Fabric API под 1.21. Если репо вдруг ругнется — обнови на ближайшую доступную 1.21.
-fabric_api_version=0.100.8+1.21
+org.gradle.jvmargs=-Xmx2G -Dfile.encoding=UTF-8
+org.gradle.warning.mode=all
 
-archives_base_name=fabric-world-randomizer
-maven_group=dev.aks
-mod_version=0.1.0
+# Локальнее и тише даггеров: отключить параллельный конфиг по желанию
+# org.gradle.configuration-cache=false
 
-org.gradle.jvmargs=-Xmx3G -Dfile.encoding=UTF-8
-java_version=21
+# Fabric Loom
+loom.platform=forge
+# ↑ НЕ ТРОГАТЬ. Для Fabric с Loom 1.6 это поле игнорируется, но если паранойя — просто удали строку.
